@startuml ClassDiagram
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50

' ==============================
' ENUMS
' ==============================
package "Enums" {
    enum OrderType {
        GENERAL
        DELIVERY
        EVENT
    }
    enum OrderStatus {
        PENDING
        PAID
        CANCELED
    }
    enum BookingStatus {
        PENDING
        DEPOSIT_PAID
        CHECKED_IN
        COMPLETED
    }
    enum RoomStatus {
        AVAILABLE
        RESERVED
        IN_USE
        CLEANING
    }
    enum RoomType {
        VIP
        STANDARD
        HALL
    }
    enum MemberTier {
        GENERAL
        BRONZE
        SILVER
        GOLD
    }
    enum CouponStatus {
        AVAILABLE
        NOT_AVAILABLE
    }
    enum StaffRole {
        PartyStaff
        KitchenStaff
    }
    enum DeliveryPlatform {
        GRAB
        LINE_MAN
        SHOPEE_FOOD
    }
    enum DeliveryStatus {
        PENDING
        PAID
        IN_TRANSIT
        DELIVERED
        CANCELED
    }
    enum MenuItemStatus {
        AVAILABLE
        UNAVAILABLE
    }
}

' ==============================
' USERS
' ==============================
class User {
    - __id : str
    - __name : str
    + id() : str
    + name() : str
}

class Staff extends User {
    - __role : StaffRole
    + role() : StaffRole
}

class Customer extends User {
    - __tier : MemberTier
    + <<abstract>> tier() : MemberTier
}

class Member extends Customer {
    - __coupon_list : List<Coupon>
    - __receipt_list : List<Receipt>
    - __tier : MemberTier
    + add_receipt(receipt: Receipt)
    + add_coupon(coupon: Coupon)
    + get_coupon_by_code(code: str) : Coupon
    + tier() : MemberTier
}

' ==============================
' CORE ENTITIES
' ==============================
class MenuItem {
    - __name : str
    - __price : float
    - __status : MenuItemStatus
    + name() : str
    + price() : float
    + status() : MenuItemStatus
}

class OrderItem {
    - __menu_item : MenuItem
    - __quantity : int
    + menu_item() : MenuItem
    + quantity() : int
    + price() : float
    + get_details() : Dict<str, Any>
}

class Room {
    - __room_id : str
    - __room_type : RoomType
    - __status : RoomStatus
    - __price_per_hour : float
    - __capacity : int
    + mark_room_in_use()
    + price_per_hour() : float
    + id() : str
    + status() : RoomStatus
    + type() : RoomType
    + capacity() : int
}

class TimeSlot {
    - __start_time : datetime
    - __end_time : datetime
    - __hours : int
    + start_time() : datetime
    + end_time() : datetime
    + hours() : int
}

class Booking {
    - __id : str
    - __member : Member
    - __room : Room
    - __time_slot : TimeSlot
    - __status : BookingStatus
    + mark_paid_deposit()
    + mark_completed()
    + mark_checked_in()
    + get_details() : Dict<str, Any>
    + full_price() : float
    + deposit() : float
    + amount_due() : float
}

class Delivery {
    - __delivery_id : str
    - __platform : DeliveryPlatform
    - __distance : float
    - __status : DeliveryStatus
    + mark_delivered()
    + mark_as_paid()
    + mark_canceled()
    + get_details() : Dict<str, Any>
    + fee() : float
}

' ==============================
' COUPONS
' ==============================
abstract class Coupon {
    - __id : str
    - __code : str
    - __minimum_price : float
    - __status : CouponStatus
    + minimum_price() : float
    + status() : CouponStatus
    + code() : str
    + is_applicable(base_price: float) : bool
    + {abstract} apply_coupon(base_price: float) : float
    + mark_as_used()
}

class PercentCoupon extends Coupon {
    - __percent : float
    + apply_coupon(base_price: float) : float
}

class FixedAmountCoupon extends Coupon {
    - __amount : float
    + apply_coupon(base_price: float) : float
}

' ==============================
' PAYMENT
' ==============================
abstract class PaymentMethod {
    - __id : str
    - __name : str
    + <<abstract>> name() : str
    + {abstract} pay(amount: float, kwargs) : Tuple<bool, str>
}

class QRCode extends PaymentMethod {
    + pay(amount: float, kwargs) : Tuple<bool, str>
}

class CreditCard extends PaymentMethod {
    + pay(amount: float, kwargs) : Tuple<bool, str>
}

class Cash extends PaymentMethod {
    + pay(amount: float, kwargs) : Tuple<bool, str>
}

' ==============================
' ORDER & RECEIPT
' ==============================
class Order {
    - __id : str
    - __customer : Customer
    - __order_list : List<OrderItem>
    - __status : OrderStatus
    - __coupon_used : Coupon
    - __booking : Booking
    - __delivery : Delivery
    - __subtotal : float
    - __discount : float
    - __final_price : float
    + add_item(item: OrderItem)
    + add_booking(booking: Booking)
    + add_delivery(delivery: Delivery)
    + pre_calculate_totals(coupon_code: str) : Dict<str, Any>
    + calculate_totals(coupon_code: str) : Dict<str, Any>
    + execute_payment(method: PaymentMethod, details: Dict, coupon: str) : Receipt
    + subtotal() : float
    + discount() : float
    + final_price() : float
    + total_payable_amount() : float
}

class Receipt {
    - __id : str
    - __order : Order
    - __method : PaymentMethod
    - __timestamp : datetime
    + generate() : Dict<str, Any>
}

' ==============================
' CENTRAL SYSTEM
' ==============================
class Restaurant {
    - __recipts : List<Receipt>
    - __coupon_list : List<Coupon>
    - __members : List<Member>
    - __staff_list : List<Staff>
    - __bookings : List<Booking>
    - __orders : List<Order>
    - __payment_strategies : List<PaymentMethod>
    - __room_list : List<Room>
    + add_room(room: Room)
    + add_booking(booking: Booking)
    + add_order(order: Order)
    + process_order_payment(order_id, staff_id, coupon, method, details) : Dict
    + preview_order_bill(order_id, staff_id, coupon) : Dict
    + check_and_issue_reward(order: Order) : str
}

' ==============================
' RELATIONSHIPS
' ==============================
Restaurant o-- Receipt
Restaurant o-- Coupon
Restaurant o-- Member
Restaurant o-- Staff
Restaurant o-- Booking
Restaurant o-- Order
Restaurant o-- PaymentMethod
Restaurant o-- Room

Order *-- OrderItem
OrderItem --> MenuItem
Order o-- Booking
Order o-- Delivery
Order --> Customer
Order --> Coupon

Booking --> Room
Booking --> TimeSlot
Booking --> Member

Receipt --> Order
Receipt --> PaymentMethod

Member o-- Coupon
Member o-- Receipt

@enduml